--- a/miniprojekt-blazor/miniprojekt-blazor/miniprojekt-blazor.csproj
+++ b/miniprojekt-blazor/miniprojekt-blazor/miniprojekt-blazor.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.10" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Shared.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
