--- a/miniprojekt-web-api/miniprojekt-web-api/miniprojekt-web-api.csproj
+++ b/miniprojekt-web-api/miniprojekt-web-api/miniprojekt-web-api.csproj
@@ -19,4 +19,10 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
 </Project>
