--- a/miniprojekt-web-api/miniprojekt-web-api/miniprojekt-web-api.csproj
+++ b/miniprojekt-web-api/miniprojekt-web-api/miniprojekt-web-api.csproj
@@ -27,8 +27,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Data\" />
+    <None Remove="Service\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Service\" />
   </ItemGroup>
 </Project>
