--- a/miniprojekt-web-api/miniprojekt-web-api/Properties/launchSettings.json
+++ b/miniprojekt-web-api/miniprojekt-web-api/Properties/launchSettings.json
@@ -9,16 +9,18 @@
     }
   },
   "profiles": {
-    "http": {
+    //"http": {
+    "miniprojekt-web-api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5020",
+      "launchUrl": "api/Post",
+      "applicationUrl": "https://localhost:7064;http://localhost:5020",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true
     },
+    /*
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -28,7 +30,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true
-    },
+    },*/
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
