--- a/miniprojekt-web-api/miniprojekt-web-api/Properties/launchSettings.json
+++ b/miniprojekt-web-api/miniprojekt-web-api/Properties/launchSettings.json
@@ -9,23 +9,33 @@
     }
   },
   "profiles": {
-    "miniprojekt-web-api": {
+    "http": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/post",
-      "applicationUrl": "https://localhost:7064;http://localhost:5020",
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5020",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+      "dotnetRunMessages": true,
+    }, 
+      "https": {
+        "commandName": "Project",
+        "launchBrowser": true,
+        "launchUrl": "swagger",
+        "applicationUrl": "https://localhost:7064;http://localhost:5020",
+        "environmentVariables": {
+          "ASPNETCORE_ENVIRONMENT": "Development"
+        },
+        "dotnetRunMessages": true
+      },
+      "IIS Express": {
+        "commandName": "IISExpress",
+        "launchBrowser": true,
+        "launchUrl": "swagger",
+        "environmentVariables": {
+          "ASPNETCORE_ENVIRONMENT": "Development"
+        }
       }
     }
-  }
 }
