--- a/miniprojekt-web-api/miniprojekt-web-api/miniprojekt-web-api.csproj
+++ b/miniprojekt-web-api/miniprojekt-web-api/miniprojekt-web-api.csproj
@@ -7,7 +7,8 @@
     <RootNamespace>miniprojekt_web_api</RootNamespace>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(RunConfiguration)' == 'miniprojekt-web-api' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
